[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "forgeai"
version = "1.1.0"
description = "A unified, dual-backend CLI and API server for local LLMs — bridging raw performance and production usability."
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.10"
authors = [
    {name = "ForgeAI Team"},
]
keywords = ["vllm", "llama-cpp", "llm", "inference", "cli", "devtool", "gpu", "gguf"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "typer>=0.9.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "rich>=13.0",
    "pyyaml>=6.0",
    "httpx>=0.27.0",
    "prometheus-client>=0.20.0",
    "huggingface-hub>=0.23.0",
    "pyjwt>=2.8.0",
    "psutil>=5.9.0",
    "safetensors>=0.4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.4.0",
    "mypy>=1.10",
]
gpu = [
    "vllm>=0.14.0",
    "nvidia-ml-py>=12.0.0",
]
vllm = [
    "vllm>=0.14.0",
    "nvidia-ml-py>=12.0.0",
]
llamacpp = [
    "llama-cpp-python>=0.3.0",
]
all = [
    "vllm>=0.14.0",
    "nvidia-ml-py>=12.0.0",
    "llama-cpp-python>=0.3.0",
]

[project.scripts]
forgeai = "forgeai.cli.main:app"

[project.urls]
Homepage = "https://github.com/forgeai/forgeai"
Documentation = "https://github.com/forgeai/forgeai#readme"
Repository = "https://github.com/forgeai/forgeai"
Issues = "https://github.com/forgeai/forgeai/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py310"
line-length = 100
src = ["src", "tests"]
cache-dir = "/tmp/forgeai-ruff-cache"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-v --tb=short"
cache_dir = "/tmp/forgeai-pytest-cache"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
cache_dir = "/tmp/forgeai-mypy-cache"

[[tool.mypy.overrides]]
module = ["PIL", "PIL.*", "psutil", "pynvml", "vllm", "yaml"]
ignore_missing_imports = true
